Fixed overflow

--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
 	padding: 15px;
 	font-family: "Verdana", "Helvetica", "Tahoma";
 	max-width: 800px;
-	overflow:hidden;
+	overflow-x:hidden;
 	margin-bottom:-900px;
 }
 
